# AGENT

./: README.md  git.txt  pyproject.toml
agent/components/chains/rags/: __init__.py  vectorstore_retrieval.py  vectorstore_retriever.py
agent/components/embeddings/: openai_builder.py
agent/components/knowledges/: loader.py
agent/components/llms/: __init__.py  openai_builder.py
agent/components/vectorstores/: __init__.py  faiss_builder.py
agent/components/vectorstores/faiss_index/: index.pkl
agent/config/: __init__.py  load.py  local.env
agent/server/: run_streamlit.py  run_streamlit_tiny.py
agent/server/chains/rags/: __init__.py  vectorstore_retriever.py
agent/server/embeddings/: __init__.py  openai_builder.py  openai_provider.py
agent/server/knowledges/: __init__.py
agent/server/llms/: __init__.py  openai_builder.py  openai_provider.py
agent/server/vectorstores/: faiss_builder.py  faiss_provider.py
