[tool.poetry]
name = "agent"
version = "0.1.0"
description = ""
authors = ["psb <vbbn2030@gmail.com>"]
packages = [{ include = "agent" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
langchain = "^0.3.1"
uvicorn = "^0.30.6"
langchain-community = "^0.3.1"
langchain-openai = "^0.2.1"
faiss-cpu = "^1.8.0.post1"
pypdf = "^5.0.0"
streamlit = "^1.38.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
